# postmortem-a-gen

./: .dockerignore  .gitignore  Dockerfile  README.md  bedrock.py  pyproject.toml  requirements.txt  slack.py
app/: __main__.py
app/handlers/: models.py  router.py
app/services/: bedrock.py  google.py  orchestrator.py  slack.py
app/utils/: __init__.py  main.py
docs/: google-auth.md
infra/: addons.tf  iam.tf  main.tf  outputs.tf  terraform.tf  variables.tf
k8s/: deployment.yaml  external-secret.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/app/services/: slack.py
tests/: test_main.py
